--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -13,7 +13,7 @@ platforms:
   - name: windows-2012r2
     driver_plugin: vagrant
     driver_config:
-      box: red-gate/windows-2012r2
+      box: kensykora/windows_2012_r2_standard
     transport:
       name: winrm
       elevated: true
