--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -12,24 +12,25 @@ provisioner:
   custom_options: <%= ENV['PUPPET_COLOR'] %>
   require_puppet_collections: true
   puppet_detailed_exitcodes: true
-  puppet_whitelist_exit_code:
+  max_retries: 3
+  retry_on_exit_code:
+    - 1
     - 2
+    - 4
+    - 6
+
+transport:
+  name: winrm
 
 platforms:
   - name: windows-2012r2
     driver_plugin: vagrant
     driver_config:
       box: red-gate/windows-2012r2
-    transport:
-      name: winrm
-      elevated: true
   - name: windows-2019-core
     driver_plugin: vagrant
     driver_config:
       box: red-gate/windows-2019-core
-    transport:
-      name: winrm
-      elevated: true
 
 verifier:
   name: shell
